test/runtime/fail/expr/undefined_variable.hy

// expect error: Undefined variable `a`

let a = 3 + a
